--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,6 +1,8 @@
 // @import "_typography";
 @import "_vars";
 @import "_base";
+@import "_tabs";
+@import "_accordion";
 
 body,html{
 	height: 100%;
@@ -9,3 +11,4 @@ body,html{
 	color: #000;
 	font-family: $mainFont;
 }
+
