--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -12,6 +12,8 @@ body {
   font-size: 16px;
   min-width: 320px;
   position: relative;
+  margin: 0;
+  padding: 0;
   line-height: 1.75;
   overflow-x: hidden;
   opacity: 1;
