--- a/app/scss/_lightbox.scss
+++ b/app/scss/_lightbox.scss
@@ -16,35 +16,28 @@
 		}
 	}
 	.my-content{
-		position: absolute;
+		position: relative;
 		width: 100%;
-		height: 0;
 		overflow: hidden;
-		padding: 0;
+		padding: 0px;
 		border: none;
-		margin: 0;
 		max-width: 50%;
-		left: 50%;
-		margin-left: -25%;
 		box-shadow: 0 0 5px #000;
 		border-radius: 10px;
 		background-color: #fff;
+		height: 0px;
 		top:50%;
-		opacity: 0;
-		transition:all .4s;
+		box-sizing:border-box;
+		margin: auto;
+		transition:top .4s;
 		&.active-content{
-			z-index: 9999;
-			display: block;
+			background-color: #fff;
+			top:0;
 			height: auto;
 			padding: 20px;
-			background-color: #fff;
-			opacity: 1;
 		}
-
 	}
 	.overlay{
-		content: '';
-		display: block;
 		top:0;
 		right: 0;
 		left: 0;
@@ -55,5 +48,7 @@
 		min-height: 100vh;
 		height: auto;
 		background-color: rgba(0,0,0,.9);
+		overflow: auto;
+		display: flex;
 	}
 }
