--- a/app/scss/_lightbox.scss
+++ b/app/scss/_lightbox.scss
@@ -16,6 +16,7 @@
 		}
 	}
 	.my-content{
+		position: relative;
 		width: 100%;
 		overflow: hidden;
 		padding: 0px;
@@ -23,15 +24,17 @@
 		max-width: 50%;
 		box-shadow: 0 0 5px #000;
 		border-radius: 10px;
-		background-color: #000;
-		height: 0;
-		transition: all .4s;
+		background-color: #fff;
+		height: 0px;
+		top:50%;
+		box-sizing:border-box;
 		margin: auto;
+		transition:top .4s;
 		&.active-content{
 			background-color: #fff;
+			top:0;
 			height: auto;
 			padding: 20px;
-			top:50%;
 		}
 	}
 	.overlay{
