--- a/app/scss/_lightbox.scss
+++ b/app/scss/_lightbox.scss
@@ -26,18 +26,18 @@
 		border-radius: 10px;
 		background-color: #fff;
 		height: 0px;
-		top:50vh;
+		top:50%;
 		box-sizing:border-box;
 		margin: auto;
 		transition:top .4s;
 		&.active-content{
 			background-color: #fff;
-			top:0vh;
+			top:0;
 			height: auto;
 			padding: 20px;
 		}
 	}
-	.content-container.open{
+	.overlay{
 		top:0;
 		right: 0;
 		left: 0;
