--- a/app/scss/_lightbox.scss
+++ b/app/scss/_lightbox.scss
@@ -1,4 +1,8 @@
 .alpin-lightbox{
+	@keyframes slide {
+		from {opacity: 0;top:50vh;}
+		to {opacity: 1;top:0vh;}
+	}
 	.content-container{
 		&>.trigger{
 			display: none;
@@ -26,15 +30,13 @@
 		border-radius: 10px;
 		background-color: #fff;
 		height: 0px;
-		top:50%;
 		box-sizing:border-box;
 		margin: auto;
-		transition:top .4s;
 		&.active-content{
 			background-color: #fff;
-			top:0;
 			height: auto;
 			padding: 20px;
+			animation: slide .4s;
 		}
 	}
 	.overlay{
