--- a/app/scss/_lightbox.scss
+++ b/app/scss/_lightbox.scss
@@ -36,7 +36,7 @@
 			background-color: #fff;
 			height: auto;
 			padding: 20px;
-			animation: slide .4s;
+			animation: slide .4s!important;
 		}
 	}
 	.overlay{
